apex-mdapi/src/objects/NewsLocalized__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CarouselContentDocumentId__c</fullName>
        <label>Carousel Content Document Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarouselImageUrl__c</fullName>
        <label>Carousel Image Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DetailContentDocumentId__c</fullName>
        <label>Detail Content Document Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DetailImageUrl__c</fullName>
        <label>Detail Image Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <label>Locale</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>en_US</fullName>
                    <label>English</label>
                </value>
                <value>
                    <fullName>fr</fullName>
                    <label>French</label>
                </value>
                <value>
                    <fullName>de</fullName>
                    <label>German</label>
                </value>
                <value>
                    <fullName>it</fullName>
                    <label>Italian</label>
                </value>
                <value>
                    <fullName>es</fullName>
                    <label>Spanish</label>
                </value>
                <value>
                    <fullName>pt-BR</fullName>
                    <label>Portoguese</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>News__c</fullName>
        <label>News</label>
        <referenceTo>News__c</referenceTo>
        <relationshipName>NewsLocalized</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VideoPosition__c</fullName>
        <label>Video position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On top</fullName>
                </value>
                <value>
                    <fullName>On bottom</fullName>
                    <default>true</default>
                    <label>On bottom</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YuotubeLink__c</fullName>
        <inlineHelpText>Youtube video Code.

To retrieve the YouTube video code from a YouTube URL, follow these steps:

1. Copy the full URL of the YouTube video you want to extract the code from.
2. Paste the URL into your web browser&apos;s address bar.
3. Look for the part of the URL after &quot;v=&quot;.
4. The code following &quot;v=&quot; is the YouTube video code.
In this example (https://www.youtube.com/watch?v=0vQO9RcEyJA), the YouTube video code is &quot;0vQO9RcEyJA&quot;.</inlineHelpText>
        <label>Yuotube Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>News Localized</label>
    <nameField>
        <label>NewsLocalized Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>News Localized</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>